<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/top_rated_main"
            android:icon="@drawable/top_rated"
            android:title="@string/top_rated"/>
        <item
            android:id="@+id/now_playing_main"
            android:icon="@drawable/now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/favorite_main"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/up_coming_main"
            android:icon="@drawable/up_coming"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/popular_main"
            android:icon="@drawable/popular"
            android:title="@string/most_popular" />
    </group>

</menu>
